--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -1,8 +1,9 @@
 ---
-title: "Suggested plantTracker Workflow"
+title: "Suggested PlantTracker Workflow"
+author: Alice Stears
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Suggested_plantTracker_Workflow}
+  %\VignetteIndexEntry{Suggested_PlantTracker_Workflow}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -10,16 +11,117 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  rmarkdown.html_vignette.check_title = FALSE
 )
 ```
-Welcome to plantTracker! This package was designed to transform long-term 
-quadrat maps that show plant occurence and size into demographic data that can 
+
+```{r setup, include = FALSE}
+library(PlantTracker)
+library(kableExtra)
+```
+
+
+## Introduction
+Welcome to PlantTracker! This package was designed to transform long-term 
+quadrat maps that show plant occurrence and size into demographic data that can 
 be used to answer questions about population and community ecology. 
-This vignette is designed to help you use plantTracker functions to move from a 
+This vignette is designed to help you use PlantTracker functions to move from a 
 spatially referenced dataset containing plant cover data, to an output dataset 
 that contains growth and survival data for each observed individual. 
-```{r setup}
-library(PlantTracker)
+
+This vignette will walk you through the steps to get from maps of plant cover 
+to a demographic dataset that you can use for analysis!
+
+## Step 1: Prepare data
+The functions in PlantTracker require data in a specific format. PlantTracker
+includes an example dataset that consists of two pieces: 'grasslandData' and 
+'grasslandInventory'. You can load these example datasets into your global 
+environment by calling `data(grasslandData)` and `data(grasslandInventory)`. You 
+can view the documentation for these datasets by calling 
+`?grasslandData` and `?grasslandInventory`. 
+
+Most PlantTracker functions require two data objects. The first is a data.frame 
+that contains the location and metadata for each mapped individual, which we 
+from now on will call 'dat'. The second is a list that contains a vector of 
+years in which each quadrat was sampled, which we from now on will cal 'inv'. 
+Below are the basic requirements for these data objects.
+
+#### The 'dat' data.frame must . . .
+
+* be an sf data.frame. More on this below...
+* contain a row for each individual observation in each year. 
+* have a column that contains character strings indicating the specific
+epithet for each observation. This column must be a character data type. The 
+function expects this column to be called 'Species', but a different name can be 
+specified in function calls. 
+* have a column that contains character strings indicating the site at which 
+each observation was collected. This is a level of classification 'above' the 
+quadrat (i.e. all quadrats measured at the Central Plains Experimental Range in 
+Nunn, CO might have the value "CO" in this column). This column must be a 
+character data type. The function expects this column to be called 'Site', but a 
+different name can be specified in function calls. 
+* have a column that contains character strings indicating the quadrat at which 
+each observation was collected. This column must be a character data type. The 
+function expects this column to be called 'Quad', but a different name can be 
+specified in function calls. 
+* have a column that contains a value indicating the year when this individual 
+observation was collected. This must be a numeric data type, and must be either 
+a four or two digit year number. The function expects this column to be called 
+'Year', but a different name can be specified in function calls. 
+* have a column (almost always called 'geometry' in the `sf` package data 
+format) that contains a polygon representing the location of each observation.
+Each observation must be a `POLYGON` or `MULTIPOLYGON`. Data cannot be stored as 
+`POINTS`.
+    +   If the data was collected such that forbs or small grasses were mapped 
+as points and digitized as such, then these observations must be converted to 
+polygons. We recommend that you convert them to small circular polygons with an 
+identical radius. If you do this transformation, we also recommend that you
+include a column that indicates whether each row was originally mapped as a 
+polygon or a point, since the demographic data that deals with size will be
+relatively meaningless for observations originally mapped as points. 
+    +   'dat' does not need to have a coordinate reference system (i.e. CRS can be 
+'NA'), but it can have one if you'd like. 
+* should *not* have columns called 'neighbors', 'nearEdge',  'trackID', 'age', 
+'size_tplus1', 'recruit', 'survives_tplus1', 'basalArea_ramet', or 
+'basalArea_genet', since these columns are added by PlantTracker functions.  
+* Note: Additional columns can be included in the input data.frame, although it 
+might not be included in the output of PlantTracker functions. 
+
+Here is an example of a possible 'dat' input: 
+```{r results = 'asis' , echo = FALSE}
+datTable <- head(grasslandData[, !names(grasslandData) %in%
+                                  c("Clone", "Seedling", "Stems", "Basal",
+                                    "sp_code_4", "Area")])
+             
+#datTable[,c("Species","Site",'Quad', 'Year', 'geometry')] <- 
+ # text_spec(datTable[,c("Species","Site",'Quad', 'Year', 'geometry')],
+#            color = "red")
+datTable$Species <- text_spec(datTable$Species, color = "black", background = "lightgreen")
+
+table <- knitr::kable(datTable, caption = "First rows of an example 'dat' data.frame", 
+             format = "html", escape = FALSE)
+
+#table <- kableExtra::kable_styling(table, bootstrap_options = 'hover')
+table
+#kableExtra::column_spec(table, column = c(2,4,5,6,8), background = 'lightgreen')
 ```
+
+
+
+#### The 'inv' list must . . .
+
+* be a named list
+
+* the name of each element must be a character string identical to the name of 
+a quadrat in 'dat'. There cannot be two elements with the same name, and there 
+cannot be an element with more than one quadrat in its name. There must be an 
+element for each quadrat with data in 'dat'. 
+
+* the contents of each list element must be a numeric vector of years in which 
+each quadrat was sampled. If a quadrat was 'skipped' in a year, then that year 
+must be excluded from this vector. The format of the years must be the same as 
+the format of years in 'dat' (i.e. if year is a four-digit number in 'dat', then 
+it must be a four-digit number in 'inv'). 
+
 
