--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -34,7 +34,7 @@ that contains growth and survival data for each observed individual.
 This vignette will walk you through the steps to get from maps of plant cover 
 to a demographic dataset that you can use for analysis!
 
-## *1* Prepare data
+## *1.* Prepare data
 The functions in PlantTracker require data in a specific format. PlantTracker
 includes an example dataset that consists of two pieces: 'grasslandData' and 
 'grasslandInventory'. You can load these example datasets into your global 
@@ -233,7 +233,7 @@ scenario, in years 3 and 4 there are not polygons of species 'A' that are in the
 same location as our focal individual, but there is a polygon in year 4 that 
 overlaps our focal individual. If `dorm = 1`, then our focal individual would 
 get a 0 for survival, but if `dorm = 2`, then it would get a 1 for survival. 
-```{r echo = FALSE, fig.width=6, fig.align = 'center', fig.cap = "**Figure 2.1**: A visualization of the 'dormancy' scenario described above. "}
+```{r echo = FALSE, fig.width=6, fig.align = 'center', fig.cap = "**Figure 2.1**: A visualization of the 'dormancy' scenario described above."}
 exampleSmall <- exampleDat[unique(c(30, 42, 44, 25,  2, 61, 59, 52, 45,  8, 42, 37, 60, 34, 45, 38, 26, 49, 52, 46)),]
 
 exampleSmall$FocalInd <- 'other individual'
@@ -265,8 +265,8 @@ ggplot(data = exampleSmall) +
         legend.text = element_text(face = "italic"),
         plot.margin = margin(1,0,1,0),
         legend.title = element_blank()) +
-  scale_fill_brewer(type = 'qual', palette = 2) +
-  scale_colour_brewer(type = 'qual', palette = 2)
+  scale_fill_discrete(type = c("#E69F00", "#A6A6A6", "#009E73"))  +
+  scale_colour_discrete(type = c("#E69F00", "#A6A6A6", "#009E73"))
 ```
   
   If you'd like to be more specific and perhaps biologically accurate, you can also specify the `dorm` argument uniquely for each species. For example, it might be that you are confident that your data collectors did not accidentally 'miss' any individuals, and your 'dat' data.frame contains observations for shrubs or trees, which are very unlikely to go dormant, and small forbs, which are much more likely to go dormant for one or two years. In order to disallow dormancy for trees and shrubs, but to allow dormancy for forbs, you will provide a data.frame to the `dorm` argument instead of a single positive integer value. There will be two columns: 1) a "Species" column that has the species name for each species present in 'dat', and 2) a column called "dorm" that has positive integer values indicating the dormancy you'd like to allow for each species. Make sure that if you are following the data.frame approach, you must provide a dormancy argument for *every* species that has data in 'dat'. Make sure that the species names in the `dorm` data.frame are spelled exactly the same as they are in 'dat'. The data.frame should look something like this:
@@ -276,3 +276,91 @@ dormDF <- data.frame("Species" = c("tree A", "shrub B", "tree C", "forb D", "for
 knitr::kable(dormDF, caption = "**Table 2.1**: Example 'dorm' data.frame", )
 ```
   
+* `buff` This is a positive numeric value that indicates how much an invidual can move from year 1 to year 2 and still be considered the same individual (receive the same trackID). In addition to accounting for true variation in location of a plant's stem from year to year, this argument also accounts for small inconsistencies in mapping from year to year. The `buff` argument must be in the same units as the spatial values in 'dat'. For example, if the spatial data in 'dat' is measured in meters, and you want to allow a plant to 'move' 15 cm between year 1 and year 2, then you would include the argument `buff = .15` in your call to `trackSpp()`. If you want to allow no movement, use `buff = 0`. Below is a visualization of what this `buff` argument does:
+
+```{r echo = FALSE, warning= FALSE, fig.width=7.5, fig.align = 'center', fig.cap = "**Figure 2.2**: With a 10 cm buffer, these polygons in 1922 and 1923 will be identified by trackSpp() as the same individual and receive the same trackID."}
+
+exampleDat <- grasslandData[grasslandData$Site == "AZ" & 
+                              grasslandData$Quad == "SG2" & 
+                              grasslandData$Year %in% c(1922,1923), ]
+exampleDatIDsTemp <- suppressMessages(trackSpp(exampleDat, grasslandInventory, buff = .05, buffGenet = .005, clonal = 1, dorm = 1)) 
+exampleDatIDsTemp <- exampleDatIDsTemp[exampleDatIDsTemp$Species == "Bouteloua rothrockii",]
+
+exampleDatIDsTemp <- exampleDatIDsTemp[exampleDatIDsTemp$trackID %in% c("BOUROT_1922_9", "BOUROT_1923_2"),] 
+exampleDatIDsTemp$ghost <- "observation from current year"
+exampleBuffed <- st_buffer(exampleDatIDsTemp[exampleDatIDsTemp$trackID == "BOUROT_1922_9",], dist = .10)
+exampleBuffed$Year <- 1922
+exampleBuffed$ghost <- "10 cm buffer"
+exampleBuffedNext <- exampleBuffed
+exampleBuffedNext$Year <- 1923
+ghost <- exampleDatIDsTemp[exampleDatIDsTemp$trackID == "BOUROT_1922_9",]
+ghost$Year <- 1923
+ghost$ghost <- "polygon location in previous year"
+exampleDatIDs <- rbind(exampleDatIDsTemp, ghost, exampleBuffed, exampleBuffedNext )
+
+
+ggplot(data = exampleDatIDs
+       ) +
+  geom_sf(aes(fill = ghost, alpha = ghost, color = ghost, lty = ghost)) +
+  geom_segment(aes(x = .6, xend = 1, y = .4, yend = .4), size = .5, 
+               lineend = "round", color = "grey30") + 
+  geom_segment(aes(x = .6, xend = 1, y = .8, yend = .8), size = .5, 
+               lineend = "round", color = "grey30") + 
+  geom_segment(aes(x = .6, xend = .6, y = .4, yend = .8), size = .5, 
+               lineend = "round", color = "grey30") + 
+  geom_segment(aes(x = 1, xend = 1, y = .4, yend = .8), size = .5, 
+               lineend = "round", color = "grey30")+ 
+  xlab("quadrat horizontal edge (m)") +
+  ylab("quadrat vertical edge (m)") +
+  #labs(title = Year) +
+  facet_wrap( ~ Year) +
+  theme_classic() +
+  theme(axis.line = element_blank(), 
+        legend.text = element_text(face = "italic"),
+        #plot.margin = margin(1,0,1,0),
+        legend.title = element_blank()) +
+  scale_fill_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
+ scale_colour_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
+  scale_alpha_discrete(range = c(0, 1, .5)) +
+  scale_linetype_manual(values=c("twodash", "solid", "dotted"))
+```  
+
+```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.3**: With a 3 cm buffer, these polygons in 1922 and 1923 don't quite overlap, so will be identified by trackSpp() as different individuals and receive different trackIDs."}
+
+exampleBuffed <- st_buffer(exampleDatIDsTemp[exampleDatIDsTemp$trackID == "BOUROT_1922_9",], dist = .03)
+exampleBuffed$Year <- 1922
+exampleBuffed$ghost <- "3 cm buffer"
+exampleBuffedNext <- exampleBuffed
+exampleBuffedNext$Year <- 1923
+ghost <- exampleDatIDsTemp[exampleDatIDsTemp$trackID == "BOUROT_1922_9",]
+ghost$Year <- 1923
+ghost$ghost <- "polygon location in previous year"
+exampleDatIDs <- rbind(exampleDatIDsTemp, ghost, exampleBuffed, exampleBuffedNext )
+
+
+ggplot(data = exampleDatIDs
+       ) +
+  geom_sf(aes(fill = ghost, alpha = ghost, color = ghost, lty = ghost)) +
+  geom_segment(aes(x = .6, xend = 1, y = .4, yend = .4), size = .5, 
+               lineend = "round", color = "grey30") + 
+  geom_segment(aes(x = .6, xend = 1, y = .8, yend = .8), size = .5, 
+               lineend = "round", color = "grey30") + 
+  geom_segment(aes(x = .6, xend = .6, y = .4, yend = .8), size = .5, 
+               lineend = "round", color = "grey30") + 
+  geom_segment(aes(x = 1, xend = 1, y = .4, yend = .8), size = .5, 
+               lineend = "round", color = "grey30") + 
+  xlab("quadrat horizontal edge (m)") +
+  ylab("quadrat vertical edge (m)") +
+  #labs(title = Year) +
+  facet_wrap( ~ Year) +
+  theme_classic() +
+  theme(axis.line = element_blank(), 
+        legend.text = element_text(face = "italic"),
+        #plot.margin = margin(1,0,1,0),
+        legend.title = element_blank()) +
+  scale_fill_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
+ scale_colour_discrete(type = c("#E69F00", "#009E73", "#A6A6A6")) +
+  scale_alpha_discrete(range = c(0, 1, .5)) +
+  scale_linetype_manual(values=c("twodash", "solid", "dotted"))
+```  
+
