--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 ```{r setup, include = FALSE}
 library(PlantTracker)
 library(ggplot2)
+library(sf)
 ```
 
 
@@ -191,7 +192,7 @@ names of "Species", "Site", "Quad", "Year, and "geometry" (if there are any). If
 your data is ready for the next step. The default value is FALSE.
 
 ### *2.* Track Individuals Through Time
-Now it's time to transform your raw dataset into deomgraphic data! This is 
+Now it's time to transform your raw dataset into demographic data! This is 
 accomplished using the `trackSpp()` function. This function follows individual 
 plants from year to year in the same quadrat to determine survival, size in the 
 next year, age, and some additional potentially-useful demographic data. It does 
@@ -217,10 +218,10 @@ interpreted as the biological phenomenon where a plant has above-ground tissue
 present in year 1, is alive underground but with no above-ground tissue in year 
 2, and then has above-ground tissue in a subsequent year. Dormancy can also be 
 interpreted here as data-collection error, whereby an individual is accidentally 
-not mapped inbetween years where it was recorded. 
+not mapped in between years where it was recorded. 
 
   *Consider the following example*: There is a polygon of species 'A' in year 1, 
-which is our "focal indivdiual". In year 2, there is not a polygon of species 
+which is our "focal individual". In year 2, there is not a polygon of species 
 'A' that overlaps with our focal individual. In year 3, there is a polygon of 
 species 'A' that is in the same location as our focal individual. If `dorm` = 0, 
 then our focal individual would get a 0 in the survival column, and the polygon 
@@ -269,31 +270,54 @@ ggplot(data = exampleSmall) +
   scale_colour_discrete(type = c("#E69F00", "#A6A6A6", "#009E73"))
 ```
   
-  If you'd like to be more specific and perhaps biologically accurate, you can also specify the `dorm` argument uniquely for each species. For example, it might be that you are confident that your data collectors did not accidentally 'miss' any individuals, and your 'dat' data.frame contains observations for shrubs or trees, which are very unlikely to go dormant, and small forbs, which are much more likely to go dormant for one or two years. In order to disallow dormancy for trees and shrubs, but to allow dormancy for forbs, you will provide a data.frame to the `dorm` argument instead of a single positive integer value. There will be two columns: 1) a "Species" column that has the species name for each species present in 'dat', and 2) a column called "dorm" that has positive integer values indicating the dormancy you'd like to allow for each species. Make sure that if you are following the data.frame approach, you must provide a dormancy argument for *every* species that has data in 'dat'. Make sure that the species names in the `dorm` data.frame are spelled exactly the same as they are in 'dat'. The data.frame should look something like this:
+  If you'd like to be more specific and perhaps biologically accurate, you can 
+  also specify the `dorm` argument uniquely for each species. For example, it 
+  might be that you are confident that your data collectors did not accidentally 
+  'miss' any individuals, and your 'dat' data.frame contains observations for 
+  shrubs or trees, which are very unlikely to go dormant, and small forbs, which 
+  are much more likely to go dormant for one or two years. In order to disallow 
+  dormancy for trees and shrubs, but to allow dormancy for forbs, you will 
+  provide a data.frame to the `dorm` argument instead of a single positive 
+  integer value. There will be two columns: 1) a "Species" column that has the 
+  species name for each species present in 'dat', and 2) a column called "dorm" 
+  that has positive integer values indicating the dormancy you'd like to allow 
+  for each species. Make sure that if you are following the data.frame approach, 
+  you must provide a dormancy argument for *every* species that has data in 
+  'dat'. Make sure that the species names in the `dorm` data.frame are spelled 
+  exactly the same as they are in 'dat'. The data.frame should look something 
+  like this:
 ```{r echo = FALSE}
 dormDF <- data.frame("Species" = c("tree A", "shrub B", "tree C", "forb D", "forb E", "forb F"),
            "dorm" = c(0,0,0,1,2,1))
 knitr::kable(dormDF, caption = "**Table 2.1**: Example 'dorm' data.frame", )
 ```
   
-* `buff` This is a positive numeric value that indicates how much an invidual can move from year 1 to year 2 and still be considered the same individual (receive the same trackID). In addition to accounting for true variation in location of a plant's stem from year to year, this argument also accounts for small inconsistencies in mapping from year to year. The `buff` argument must be in the same units as the spatial values in 'dat'. For example, if the spatial data in 'dat' is measured in meters, and you want to allow a plant to 'move' 15 cm between year 1 and year 2, then you would include the argument `buff = .15` in your call to `trackSpp()`. If you want to allow no movement, use `buff = 0`. Below is a visualization of what this `buff` argument does:
+* `buff` This is a positive numeric value that indicates how much an individual 
+can move from year 1 to year 2 and still be considered the same individual 
+(receive the same trackID). In addition to accounting for true variation in 
+location of a plant's stem from year to year, this argument also accounts for 
+small inconsistencies in mapping from year to year. The `buff` argument must be 
+in the same units as the spatial values in 'dat'. For example, if the spatial 
+data in 'dat' is measured in meters, and you want to allow a plant to 'move' 
+15 cm between year 1 and year 2, then you would include the argument 
+`buff = .15` in your call to `trackSpp()`. If you want to allow no movement, use 
+`buff = 0`. Below is a visualization of two different `buff` scenarios.
 
-```{r echo = FALSE, warning= FALSE, fig.width=7.5, fig.align = 'center', fig.cap = "**Figure 2.2**: With a 10 cm buffer, these polygons in 1922 and 1923 will be identified by trackSpp() as the same individual and receive the same trackID."}
+```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.2**: With a 10 cm buffer, these polygons in 1922 and 1923 overlap and will be identified by trackSpp() as the same individual and receive the same trackID."}
 
 exampleDat <- grasslandData[grasslandData$Site == "AZ" & 
                               grasslandData$Quad == "SG2" & 
                               grasslandData$Year %in% c(1922,1923), ]
-exampleDatIDsTemp <- suppressMessages(trackSpp(exampleDat, grasslandInventory, buff = .05, buffGenet = .005, clonal = 1, dorm = 1)) 
-exampleDatIDsTemp <- exampleDatIDsTemp[exampleDatIDsTemp$Species == "Bouteloua rothrockii",]
-
-exampleDatIDsTemp <- exampleDatIDsTemp[exampleDatIDsTemp$trackID %in% c("BOUROT_1922_9", "BOUROT_1923_2"),] 
+exampleDatIDsTemp <- exampleDat[exampleDat$Species == "Bouteloua rothrockii",]
+exampleDatIDsTemp <- exampleDatIDsTemp[round(exampleDatIDsTemp$Area,7) %in% round(c( 0.0005471808, 0.0005321236),7),]
+ 
 exampleDatIDsTemp$ghost <- "observation from current year"
-exampleBuffed <- st_buffer(exampleDatIDsTemp[exampleDatIDsTemp$trackID == "BOUROT_1922_9",], dist = .10)
+exampleBuffed <- st_buffer(exampleDatIDsTemp[round(exampleDatIDsTemp$Area, 7) ==0.0005472,], dist = .10)
 exampleBuffed$Year <- 1922
 exampleBuffed$ghost <- "10 cm buffer"
 exampleBuffedNext <- exampleBuffed
 exampleBuffedNext$Year <- 1923
-ghost <- exampleDatIDsTemp[exampleDatIDsTemp$trackID == "BOUROT_1922_9",]
+ghost <- exampleDatIDsTemp[round(exampleDatIDsTemp$Area, 7) == 0.0005472,]
 ghost$Year <- 1923
 ghost$ghost <- "polygon location in previous year"
 exampleDatIDs <- rbind(exampleDatIDsTemp, ghost, exampleBuffed, exampleBuffedNext )
@@ -327,12 +351,12 @@ ggplot(data = exampleDatIDs
 
 ```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.3**: With a 3 cm buffer, these polygons in 1922 and 1923 don't quite overlap, so will be identified by trackSpp() as different individuals and receive different trackIDs."}
 
-exampleBuffed <- st_buffer(exampleDatIDsTemp[exampleDatIDsTemp$trackID == "BOUROT_1922_9",], dist = .03)
+exampleBuffed <- st_buffer(exampleDatIDsTemp[round(exampleDatIDsTemp$Area, 7) ==0.0005472,], dist = .03)
 exampleBuffed$Year <- 1922
 exampleBuffed$ghost <- "3 cm buffer"
 exampleBuffedNext <- exampleBuffed
 exampleBuffedNext$Year <- 1923
-ghost <- exampleDatIDsTemp[exampleDatIDsTemp$trackID == "BOUROT_1922_9",]
+ghost <- exampleDatIDsTemp[round(exampleDatIDsTemp$Area, 7) ==0.0005472,]
 ghost$Year <- 1923
 ghost$ghost <- "polygon location in previous year"
 exampleDatIDs <- rbind(exampleDatIDsTemp, ghost, exampleBuffed, exampleBuffedNext )
@@ -363,4 +387,60 @@ ggplot(data = exampleDatIDs
   scale_alpha_discrete(range = c(0, 1, .5)) +
   scale_linetype_manual(values=c("twodash", "solid", "dotted"))
 ```  
+
+* `clonal` This is a Boolean argument (0 or 1) that indicates whether you want 
+to allow plants to be clonal or not. In the context of this type of data, 
+"clonal" means that one genetic individual (or "genet") can be recorded as 
+multiple polygons (or "ramets"). If `clonal = 1`, then multiple polygons in the 
+same year can be part of the same individual and have the same trackID. If 
+`clonal = 0`, then every polygon in a given year is a unique individual and has 
+a unique trackID. This option can be defined globally for all species present in 
+'dat' by setting `clonal` equal to 0 or 1 in the `trackSpp()` function call. 
+Alternatively, `clonal` can be specified uniquely for each species by creating a
+data.frame that contains a `clonal` argument for each species (analogous to the 
+data.frame for the `dorm` argument shown in Table 2.1, but with a column called 
+"clonal"). 
+
+The following arguments to `trackSpp()` are only required in certain contexts. 
+
+* `buffGenet` is a numeric argument that is only required if `clonal = 1` 
+or if `clonal` is a data.frame that contains at least a single '1' in the 
+"clonal" column. `buffGenet` is a numeric value that indicates how close
+polygons of the same species in the same year must be to one another in order to 
+be considered parts of the same genetic individual (ramets of the same genet). 
+This argument is passed to the `groupByGenet()` function, which assigns the same 
+trackID to individuals that are within the `buffGenet` buffer of each other. 
+The value of `buffGenet` must be greater than or equal to zero, and must be in 
+the same units as the spatial data in 'dat'. `buffGenet` can be a single numeric 
+value which will be applied to all species present in 'dat', or can be specified 
+uniquely for each species by creating a data.frame that contains a `buffGenet` 
+argument for each species (analogous to the data.frame for the `dorm` argument 
+shown in Table 2.1, but with a column called "buffGenet").
+
+* `aggregateByGenet` is a logical argument that is only required if `clonal = 1` 
+or if `clonal` is a data.frame that contains at least a single '1' in the 
+"clonal" column. This argument determines whether the output data.frame from 
+`trackSpp()` will have a row for every single ramet, or will be aggregated so 
+that each genet is represented by a single row. If `aggregateByGenet = FALSE`, 
+then the output is not aggregated. If `aggregateByGenet = TRUE` (the default 
+setting), then the results are aggregated using the PlantTracker function 
+`aggregateByGenet()`. This function combines the sf "POLYGONS" for each ramet 
+into one sf "MULTIPOLYGON" for the entire genet, and combines the associated 
+metadata ("Species", "Site", "Quad", "Year", "trackID", "basalArea_genet", 
+"age", "recruit", "survives_tplus1", "size_tplus1", "nearEdge") into one row for 
+this genet. Even if the input 'dat' had additional columns, they will not be 
+included in the output of `trackSpp` if `aggregateByGenet = TRUE`, since it is 
+uncertain if they can be summed across all ramets or are identical across all 
+ramets. For example, if each ramet has a unique character string in a column 
+called "name", there is no easy way to 'sum' the character strings in this 
+column to have one value for each genet. If you want the output data.frame from 
+`trackSpp()` to have the same columns as your input 'dat' data.frame, set the 
+`aggregateByGenet` argument to FALSE. However, Be Careful, since any demographic 
+analysis should be done with a data.set that has only one row per genet, 
+otherwise you will be estimating survival and growth rates on the scale of 
+ramets instead of genets. If you take the `aggregateByGenet = FALSE` route, be 
+sure to pass your dataset through the `aggregateByGenet()` function (or 
+aggregate to the genet scale using your preferred method) before 
+demographic analysis. 
+
 
