--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -669,4 +669,15 @@ At this point, this dataset should be ready for you to use in any applications
 wish! There are a few additional functions that may help you in your analyses, 
 and these are outlined in this section. 
 
-* recruitment by species-by-plot-by-year
+* Calculate recruitment by species-by-plot-by-year: the `getRecruits` function
+
+* Calculate population rate of increase (lambda) for each species in a 
+plot: the `getLambda` function
+
+* Calculate the basal area of each species in each quadrat in each 
+year: the `getBasalAreas` function
+
+* Make maps of quadrats over time: the `drawQuadMap` function
+
+Specific instructions for how to use each of these functions can be found in 
+their documnetation!
