shitty first draft

--- a/references.bib
+++ b/references.bib
@@ -977,9 +977,12 @@
     year = {2019},
     journal = {Oecologia},
     author = {Griffin-Nolan, Robert J. and Ocheltree, Troy W. and Mueller, Kevin E. and Blumenthal, Dana M. and Kray, Julie A. and Knapp, Alan K.},
-    number = {0123456789},
+    number = {2},
+    month = {2},
+    pages = {353--363},
+    volume = {189},
     publisher = {Springer Berlin Heidelberg},
-    url = {https://doi.org/10.1007/s00442-019-04336-w},
+    url = {https://doi.org/10.1007/s00442-019-04336-w http://link.springer.com/10.1007/s00442-019-04336-w},
     isbn = {0123456789},
     doi = {10.1007/s00442-019-04336-w},
     issn = {0029-8549},
@@ -1971,12 +1974,12 @@
     keywords = {Annual plants, Chihuahuan Desert, Climate change, Demography, Intra-annual variability, Missing data, Plant-climate interactions}
 }
 
-@book{RCoreTeam2019,
+@misc{RCoreTeam2021,
     title = {{R: A language and environment for statistical computing}},
-    year = {2019},
-    booktitle = {R Foundation for Statistical Computing},
+    year = {2021},
     author = {{R Core Team}},
-    url = {https://www.r_project.org},
+    publisher = {R Foundation for Statistical Computing},
+    url = {https://www.r/_project.org},
     address = {Vienna, Austria}
 }
 
@@ -3260,6 +3263,14 @@
     issn = {0012-9658}
 }
 
+@article{Bates2019Matrix:Methods,
+    title = {{Matrix: Sparse and dense matrix classes and methods}},
+    year = {2019},
+    author = {Bates, Douglas and Maechler, Martin},
+    number = {R package version 1.2-18},
+    url = {https://cran.r-project.org/package=Matrix}
+}
+
 @article{McDowell2008MechanismsDrought,
     title = {{Mechanisms of plant survival and mortality during drought: Why do some plants survive while others succumb to drought?}},
     year = {2008},
@@ -3419,6 +3430,17 @@
     number = {4},
     pages = {599--619},
     volume = {39}
+}
+
+@article{Christensen2021Quadratbased19152016,
+    title = {{Quadrat‐based monitoring of desert grassland vegetation at the Jornada Experimental Range, New Mexico, 1915–2016}},
+    year = {2021},
+    journal = {Ecology},
+    author = {Christensen, Erica and James, Darren and Maxwell, Connie and Slaughter, Amalia and Adler, Peter B. and Havstad, Kris and Bestelmeyer, Brandon},
+    pages = {0--2},
+    isbn = {0000000256},
+    doi = {10.1002/ecy.3530},
+    issn = {0012-9658}
 }
 
 @article{Milchunas1993QuantitativeEnvironments,
@@ -3657,6 +3679,15 @@
     issn = {01695347},
     pmid = {32396819},
     keywords = {demographic lability, elasticity, environmental stochasticity, population growth rate, sensitivity, vital rates}
+}
+
+@article{Csardi2006TheResearch,
+    title = {{The igraph software package for complex network research}},
+    year = {2006},
+    journal = {InterJournal},
+    author = {Csardi, Gabor and Nepusz, Tamas},
+    pages = {1695},
+    volume = {Complex Sy}
 }
 
 @article{Leibold2004TheEcology,
